# opensvm-mobile

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DIAGRAMS.md  DOCUMENTATION_GUIDE.md  KNOWLEDGE_GRAPH.md  README.md  ROADMAP.md  package-lock.json
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  workflow.md
.github/workflows/: README.md  ci.yml
Formula/: README.md
app/: _layout.tsx
app/(tabs)/: _layout.tsx  index.tsx  solanow.tsx  wallet.tsx
app/account/: [id].tsx
components/: CopyButton.tsx  MarketOverview.tsx  RecentBlocks.tsx  ShaderBackground.tsx  TeableTransactionTable.tsx  TransactionList.tsx  ValidatorDetailView.tsx  WalletButton.tsx
components/charts/: MetricsGrid.tsx
constants/: colors.ts
mocks/: github-thread.ts
opensvm-dioxus/: .gitignore  Cargo.toml  README.md  desktop_config.json  dioxus.toml
opensvm-dioxus/src/: app.rs  desktop_config.rs  main.rs  platform_optimizations.rs
opensvm-dioxus/src/assets/: styles.css
opensvm-dioxus/src/components/: ai_assistant.rs  copy_button.rs  loading_skeleton.rs  mod.rs  network_stats.rs  search_bar.rs  transaction_list.rs  validator_analytics.rs  wallet_button.rs
opensvm-dioxus/src/constants/: colors.rs  mod.rs  typography.rs
opensvm-dioxus/src/routes/: account.rs  ai.rs  explorer.rs  mod.rs  not_found.rs  solanow.rs  transaction.rs  validators.rs  wallet.rs
opensvm-dioxus/src/stores/: mod.rs  theme_store.rs  wallet_store.rs
opensvm-dioxus/src/utils/: address_utils.rs  api.rs  mod.rs
opensvm-reactnative/: package-lock.json  package.json
opensvm-reactnative/app/(tabs)/: ai.tsx  validators.tsx
opensvm-reactnative/app/transaction/: [id].tsx
opensvm-reactnative/components/: AIAssistant.tsx  GitHubThread.tsx  LoadingSkeleton.tsx  MenuOverlay.tsx  NetworkStats.tsx  SearchBar.tsx  ValidatorAnalytics.tsx
opensvm-reactnative/components/charts/: GlobeVisualization.tsx  LineChart.tsx
opensvm-reactnative/components/ui/: Card.tsx  Column.tsx  Row.tsx  index.ts
opensvm-reactnative/constants/: typography.ts
opensvm-reactnative/hooks/: use-github-discussions.ts  use-network-stats.ts  use-validator-metrics.ts  use-websocket.ts
opensvm-reactnative/stores/: wallet-store.ts
stores/: theme-store.ts
types/: blockchain.ts
utils/: address-utils.ts
